fixed mobile spacing issues
desktop images were cut off

menu was cut off

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -103,7 +103,18 @@ header {
         text-align: center;
     }
 
-    p {
-        font-weight: 300;
+    
+
+    .header-links p{
+        display: none;
     }
+
+    .menu {
+        padding-right: 5px;
+    }
+
+    .menu p{
+        font-size: 16px;
+    }
+
 }
