--- a/src/styles/viewProject.css
+++ b/src/styles/viewProject.css
@@ -9,6 +9,7 @@
 .project-body h3{
     color: black;
     font-family: 'Montserrat';
+    text-align: center;
 }
 
 .project-body h1{
